fixed some bugs with alignments

--- a/client/public/main.css
+++ b/client/public/main.css
@@ -29,7 +29,6 @@
 }
 
 .ingredients-list{
-    margin-top: 40px;
     padding-top: 50px;
     padding-bottom: 50px;
     border-radius: 5px;
@@ -47,6 +46,7 @@
     position: fixed;
     height: 100%;
     right: 0;
+    padding-top: 7rem;
 }
 
 .ingredients-container{
